-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1
-
None
-
linux with x11 and eglfs
-
32af8055985c1f978574eec62512638f472e8290
Item and Image particles are leaking memory. Can be checked with the examples using pmap -x on linux.
The bug can be related to QTBUG-34991 and QTBUG-34994.
Even if the main the page is deleted and created again and gc is called by a timer:
Item { id: root width: 1920 height: 1080 property variant particleEffect Component { id: comp Item { anchors.fill: parent ParticleEffect { anchors.fill: parent } } //} Timer { interval: 3000 running: true repeat: true triggeredOnStart: true onTriggered: { if(particleEffect != null) { particleEffect.destroy() gc() } particleEffect = comp.createObject(root); } } }
- relates to
-
QTBUG-34994 QQuickImageParticle shouldn't store SG data
-
- Open
-
-
QTBUG-34991 Particles have high memory consumption
-
- Closed
-
For Gerrit Dashboard: QTBUG-36782 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
97972,3 | Fix leaks in QQuickImageParticle | 5.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |